Products.CMFDefault Changelog
=============================

2.2.0 (unreleased)
------------------

- DiscussionTool: Make sure to only ask "real" content for their type
  information when checking whether discussions are allowed or not.

- skins: Display add actions in the main_template.
  Using folder_factories is now deprecated.

- views: Added FallbackAddView.
  This add form works with any portal type. It just asks for the ID.

- formlib widgets: Added special input widget for object IDs.

- main_template: Display action icons, thereby replacing the separate
  CMFActionIcons product.

- Portal: Add a flag to toggle the display of action icons.

- Workflow GenericSetup definition: Add icon URL expressions to the 
  worklist and transition action definitions.

- Content type and action GenericSetup profiles: Add an icon URL expression 
  to the content type and actions definitions.

- File and Image: Move the call to the underlying OFS rendering to the
  end of their own index_html methods to ensure the caching policy
  manager can set headers in all situations.
  (https://bugs.launchpad.net/zope-cmf/+bug/161723)

- Discussions: Replaced the old (and no longer working) way to force 
  Discussion Items into published state by default with a real 
  single-state workflow so they are put into published state correctly.
  (https://bugs.launchpad.net/zope-cmf/+bug/161720)

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFDefault Content".

- SyndicationTool: Removed obsolete documentation link from the
  Overview ZMI tab.
  (https://bugs.launchpad.net/zope-cmf/+bug/185090)
  
- Document: Fixed Zope 2.12 compatibility.
  zope.structuredtext is now used instead of StructuredText.

- Image, File:  make ZMI "edit" view work.

- views: Added ContentAddFormBase and several content add views.
  This shows how form-driven content creation works. The content is created
  without using the constructor methods provided by the types tool.
