@@ -7,6 +7,8 @@
 
   <include package=".formlib"/>
 
+  <include package=".upgrade"/>
+
   <include file="content.zcml"/>
 
   <include file="exportimport.zcml"/>
